[project]
name = "statistical-analysis-project"
version = "0.1.0"
description = "Statistical analysis of US medical insurance costs using descriptive statistics, visualizations, and hypothesis testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
